fixed horizontal scroll issue on chrome.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 html {
   min-height:100%;/* make sure it is at least as tall as the viewport */
   position:relative;
+  max-width: 100%;
 }
 
 body {
@@ -24,6 +25,11 @@ body {
   overflow-x: hidden;
   height: 100%;
   min-height: 100vh;
+  
+}
+
+.site-wrapper {
+  max-width: 100% !important;
 }
 
 a {
@@ -94,6 +100,7 @@ h6 {
 
   #bootstrap-overrides body {
     overflow-x: hidden;
+    max-width: 100%;
   }
 
   .particles-js {
@@ -1194,6 +1201,23 @@ figcaption {
   .navbar .dropdown .dropdown:hover>ul {
     left: -100%;
   }
+
+  #background-gradient3 {
+    display: none;
+  }
+
+  .contact {
+    height: 70%;
+    padding-bottom: 20%;
+  }
+
+  #skills {
+    padding: 0;
+    margin:0;
+  }
+
+  
+
 }
 
 
